--- a/GUI-Logic/View/screens.kv
+++ b/GUI-Logic/View/screens.kv
@@ -14,7 +14,7 @@
         md_bg_color: 0.05, 0.07, 0.12, 1
 
         MDLabel:
-            text: "🍹 Willkommen zu MixMate"
+            text: "Willkommen zu MixMate"
             halign: "center"
             font_style: "H4"
             theme_text_color: "Custom"
